Added lite-server and sass npm scripts
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "lite-server": "^2.5.4",
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run watch:all",
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
+    "watch:all": "concurrently \"npm run watch:scss\" \"npm run lite\""
   },
   "repository": {
     "type": "git",
