Fixed browsersync config
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/package.json
+++ b/package.json
@@ -23,12 +23,7 @@
     "gulp-usemin": "^0.3.30"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run watch:all",
-    "lite": "lite-server",
-    "scss": "node-sass -o css/ css/",
-    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
-    "watch:all": "concurrently \"npm run watch:scss\" \"npm run lite\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
